2005-11-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libgnomeprintui has been branched for
	gnome-2-12.

2005-11-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: totem has been branched for gnome-2-12.

2005-11-02  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gedit-plugin's POT name ??(TODO).

2005-11-02  Vincent van Adrighem  <adrighem@gnome.org>

	* translation-status.xml: gnome-session branched for gnome-2-12

2005-10-29  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected gettext package of evolution*.

2005-10-25  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: meld is back to HEAD.

2005-10-25  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: eog has branched for 2.12.

2005-10-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gucharmap has been branched for gnome-2-12.

2005-10-24  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-keyring, gnome-icon-theme,
	and file-roller have been branched for gnome-2-12.

2005-10-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center, gnome-panel, and
	gnome-doc-utils have been branched for gnome-2-12.

2005-10-16  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: epiphany-extensions HEAD branch is using
	1.10 naming series.
	
2005-10-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Yelp has branched for gnome-2-12, and
	po-locations should also use gnome-2-12 if the rest of gnome-applets
	uses it...

2005-10-15  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Added baobab.

2005-10-12  Adam Weinberger  <adamw@gnome.org>

	* translation-status.xml: Change branch tags for modules within the gnome-2.14
	  branch from gnome-2.12 to HEAD, as the status pages for gnome-2.14 currently
	  show the same thing as gnome-2.12.

2005-10-07  Danilo Šegan  <danilo@gnome.org>
