@@ -29,11 +29,11 @@
       <essential/>
       <frozen/>
     </group>
-<!--<group name="proposed">
+    <group name="proposed">
       <description>Proposed GNOME desktop and developer platform software.</description>
       <essential/>
       <frozen/>
-    </group>-->
+    </group>
   </release>
   <release name="HEAD">
     <group name="fifth-toe">
@@ -82,6 +82,17 @@
       <component name="atk" dir="atk" group="developer-libs">
         <podir dir="po"/>
         <potname name="atk10.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
+  <module name="atomix">
+    <version release="gnome-2.14">
+      <component name="atomix" dir="atomix" group="proposed">
+        <podir dir="po"/>
+        <potname name="atomix.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -296,6 +307,17 @@
       <component name="dasher" dir="dasher" group="desktop">
         <podir dir="po"/>
         <potname name="dasher.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
+  <module name="deskbar-applet">
+    <version release="gnome-2.14">
+      <component name="deskbar-applet" dir="deskbar-applet" group="proposed">
+        <podir dir="po"/>
+        <potname name="deskbar-applet.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -584,8 +606,8 @@
     </version>
   </module>
   <module name="fast-user-switch-applet">
-    <version release="HEAD">
-      <component name="fast-user-switch-applet" dir="fast-user-switch-applet" group="extras">
+    <version release="gnome-2.14">
+      <component name="fast-user-switch-applet" dir="fast-user-switch-applet" group="proposed">
         <podir dir="po"/>
         <potname name="fast-user-switch-applet.pot"/>
         <branch name="HEAD"/>
@@ -1471,8 +1493,8 @@
     </version>
   </module>
   <module name="gnome-power-manager">
-    <version release="HEAD">
-      <component name="gnome-power-manager" dir="gnome-power-manager" group="extras">
+    <version release="gnome-2.14">
+      <component name="gnome-power-manager" dir="gnome-power-manager" group="proposed">
         <podir dir="po"/>
         <potname name="gnome-power.pot"/>
         <branch name="HEAD"/>
@@ -1493,8 +1515,8 @@
     </version>
   </module>
   <module name="gnome-screensaver">
-    <version release="HEAD">
-      <component name="gnome-screensaver" dir="gnome-screensaver" group="extras">
+    <version release="gnome-2.14">
+      <component name="gnome-screensaver" dir="gnome-screensaver" group="proposed">
         <podir dir="po"/>
         <potname name="gnome-screensaver.pot"/>
         <branch name="HEAD"/>
@@ -2476,8 +2498,8 @@
     </version>
   </module>
   <module name="pessulus">
-    <version release="HEAD">
-      <component name="pessulus" dir="pessulus" group="extras">
+    <version release="gnome-2.14">
+      <component name="pessulus" dir="pessulus" group="proposed">
         <podir dir="po"/>
         <potname name="pessulus.pot"/>
         <branch name="HEAD"/>
