@@ -1,3 +1,7 @@
+2005-11-13  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Added gnome-2.14 proposed modules.
+
 2005-11-11  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: libgnomeprintui has been branched for
